--- a/Syntagh/Screens.csproj
+++ b/Syntagh/Screens.csproj
@@ -76,6 +76,12 @@
     <Compile Include="diagnwsh.Designer.cs">
       <DependentUpon>diagnwsh.cs</DependentUpon>
     </Compile>
+    <Compile Include="paradeigma.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="paradeigma.Designer.cs">
+      <DependentUpon>paradeigma.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="diagnwsh.resx">
       <DependentUpon>diagnwsh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="paradeigma.resx">
+      <DependentUpon>paradeigma.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
