ανέβασα τις φώτος

--- a/Syntagh/Screens.csproj
+++ b/Syntagh/Screens.csproj
@@ -134,5 +134,8 @@
   <ItemGroup>
     <None Include="Resources\set-doctor-cartoon-characters-medical-staff-team-concept-hospital_36082-551.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\τελικοαμαν.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
