--- a/Syntagh/Screens.csproj
+++ b/Syntagh/Screens.csproj
@@ -46,23 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Asfaleia.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Asfaleia.Designer.cs">
-      <DependentUpon>Asfaleia.cs</DependentUpon>
-    </Compile>
     <Compile Include="diagnwsh.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="diagnwsh.Designer.cs">
       <DependentUpon>diagnwsh.cs</DependentUpon>
-    </Compile>
-    <Compile Include="epikoinonia.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="epikoinonia.Designer.cs">
-      <DependentUpon>epikoinonia.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -105,9 +93,6 @@
     <EmbeddedResource Include="diagnwsh.resx">
       <DependentUpon>diagnwsh.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="epikoinonia.resx">
-      <DependentUpon>epikoinonia.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -145,12 +130,16 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Syntagh.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Syntagh.sln" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
