--- a/Syntagh/Screens.csproj
+++ b/Syntagh/Screens.csproj
@@ -88,6 +88,12 @@
     <Compile Include="iatriko_rantevou.Designer.cs">
       <DependentUpon>iatriko_rantevou.cs</DependentUpon>
     </Compile>
+    <Compile Include="iatriko_rantevou_onomata.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="iatriko_rantevou_onomata.Designer.cs">
+      <DependentUpon>iatriko_rantevou_onomata.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="diagnwsh.resx">
@@ -110,6 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="iatriko_rantevou.resx">
       <DependentUpon>iatriko_rantevou.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="iatriko_rantevou_onomata.resx">
+      <DependentUpon>iatriko_rantevou_onomata.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
