--- a/Syntagh/Screens.csproj
+++ b/Syntagh/Screens.csproj
@@ -88,6 +88,12 @@
     <Compile Include="iatriko_rantevou.Designer.cs">
       <DependentUpon>iatriko_rantevou.cs</DependentUpon>
     </Compile>
+    <Compile Include="iatriko_rantevou_hmeres_wres.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="iatriko_rantevou_hmeres_wres.Designer.cs">
+      <DependentUpon>iatriko_rantevou_hmeres_wres.cs</DependentUpon>
+    </Compile>
     <Compile Include="iatriko_rantevou_onomata.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,6 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="iatriko_rantevou.resx">
       <DependentUpon>iatriko_rantevou.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="iatriko_rantevou_hmeres_wres.resx">
+      <DependentUpon>iatriko_rantevou_hmeres_wres.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="iatriko_rantevou_onomata.resx">
       <DependentUpon>iatriko_rantevou_onomata.cs</DependentUpon>
