--- a/Syntagh/Screens.csproj
+++ b/Syntagh/Screens.csproj
@@ -54,6 +54,12 @@
       <DependentUpon>diagnwsh.cs</DependentUpon>
     </Compile>
     <Compile Include="efhmereuwn_farmakeia.cs" />
+    <Compile Include="eggrafh_synergath.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="eggrafh_synergath.Designer.cs">
+      <DependentUpon>eggrafh_synergath.cs</DependentUpon>
+    </Compile>
     <Compile Include="Farmakopoios.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -122,6 +128,9 @@
     <Compile Include="Xarth.cs" />
     <EmbeddedResource Include="diagnwsh.resx">
       <DependentUpon>diagnwsh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="eggrafh_synergath.resx">
+      <DependentUpon>eggrafh_synergath.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
