--- a/Syntagh/Screens.csproj
+++ b/Syntagh/Screens.csproj
@@ -60,6 +60,7 @@
     <Compile Include="eggrafh_synergath.Designer.cs">
       <DependentUpon>eggrafh_synergath.cs</DependentUpon>
     </Compile>
+    <Compile Include="epikoinwnia.cs" />
     <Compile Include="Farmakopoios.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -116,6 +117,7 @@
     <Compile Include="iatriko_rantevou_profil_iatrou.Designer.cs">
       <DependentUpon>iatriko_rantevou_profil_iatrou.cs</DependentUpon>
     </Compile>
+    <Compile Include="logariasmoi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="synergates.cs" />
@@ -125,6 +127,7 @@
     <Compile Include="test.Designer.cs">
       <DependentUpon>test.cs</DependentUpon>
     </Compile>
+    <Compile Include="user.cs" />
     <Compile Include="Xarth.cs" />
     <EmbeddedResource Include="diagnwsh.resx">
       <DependentUpon>diagnwsh.cs</DependentUpon>
