--- a/Syntagh/Screens.csproj
+++ b/Syntagh/Screens.csproj
@@ -118,9 +118,12 @@
       <DependentUpon>iatriko_rantevou_profil_iatrou.cs</DependentUpon>
     </Compile>
     <Compile Include="logariasmoi.cs" />
+    <Compile Include="paraggelia.cs" />
+    <Compile Include="plhrofories.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="synergates.cs" />
+    <Compile Include="Syntagh.cs" />
     <Compile Include="test.cs">
       <SubType>Form</SubType>
     </Compile>
